Change Java9 List.of() to Arrays.asList()
List.of() is a Java9 construct.  Java 8 should use Arrays.asList() instead.